[ICSW-905] fix for overflowing modal dialog content

--- a/initat/cluster/frontend/static/css/icsw_src.css
+++ b/initat/cluster/frontend/static/css/icsw_src.css
@@ -548,3 +548,8 @@ th[st-sort]:not(.st-sort-ascent):not(.st-sort-descent):before {
     padding-right: 3px;
     vertical-align: middle;
 }
+
+/* fix for overflowing modal dialog content */
+.modal .modal-body {
+    overflow-y: auto;
+}
